fix: center text on iOS devices

--- a/src/blocks/card/__heart-icon/card__heart-icon.css
+++ b/src/blocks/card/__heart-icon/card__heart-icon.css
@@ -10,6 +10,7 @@
   background-color: transparent;
   background-image: url(../../../images/heart-icon.svg);
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 .card__heart-icon_active {
